dot-net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service name>
  namespace: <namespace name>
  labels:
    app: <app name tag>
spec:
  selector:
    app: <deployment name>
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  type: ClusterIP
